# book_learnopengl_cn

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.org
includes/: camera.hpp
src/: square.cpp  window.cpp
src/breakout/: CMakeLists.txt  Game.cpp  Game.hpp  resource_manager.cpp  resource_manager.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/camera/: CMakeLists.txt  came_e1.cpp  came_move.cpp  camera.cpp  camera.fs  camera.vs  camera_e2.cpp
src/comm/: Shader.cpp  Shader.hpp  camera.cpp
src/projection/: CMakeLists.txt  more3d.cpp  proj_e2.cpp  proj_e3.cpp  projection.cpp  projection.vs
src/shaders/: CMakeLists.txt  e1.cpp  e2.cpp  e3.cpp  moreVetexAttr.cpp  shader.vs  uniform.cpp
src/textures/: CmakeLists.txt  textures.cpp  textures.vs  textures_e1.fs  textures_e2.cpp  textures_e3.cpp  textures_e4.cpp  textures_e4.fs
src/trangle/: e1.cpp  e2.cpp  e3.cpp
src/trans/: CMakeLists.txt  trans.cpp  trans.vs  trans_move.cpp
